retrieveNA31/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Core_Alias__c</fullName>
        <description>Alias Name based on Supported Product.</description>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Code_Name__c</fullName>
        <description>Code Name value from the related Master data Product</description>
        <inlineHelpText>Code Name value from the related Master data Product</inlineHelpText>
        <label>Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_AssetOrganization__c</fullName>
        <formula>Name + &apos; (&apos; +Core_Product_Organization__r.Core_Organization_Description__c + &apos;) &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssetOrganization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate if this asset is used by IPS or not.   CHECKED=TRUE=IPS uses this asset</description>
        <inlineHelpText>Does IPS use this asset?</inlineHelpText>
        <label>IPS Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_New_Case__c</fullName>
        <formula>if(NOT(ISPICKVAL(Status,&apos;Inactive&apos;)),if(ISPICKVAL($User.UserType,&apos;PowerCustomerSuccess&apos;),HYPERLINK(&quot;/IPS/apex/Core_IPS_Customer_Case_Creation?productId=&quot;&amp;Id&amp;&quot;&amp;projectId=&quot;&amp;Core_IPS_Project__r.Id&amp;&quot;&amp;mode=asset&amp;retURL=/02i/o&quot;,IMAGE(&quot;/IPS/servlet/servlet.FileDownload?file=015210000008un4&quot;,&quot;New Case&quot;,15,15),&quot;_parent&quot;),HYPERLINK(&quot;/apex/Core_IPS_Internal_Case_Creation?productId=&quot;&amp;Id&amp;&quot;&amp;projectId=&quot;&amp;Core_IPS_Project__r.Id&amp;&quot;&amp;mode=asset&amp;retURL=/02i/o&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=015210000008un4&quot;,&quot;New Case&quot;,15,15),&quot;_parent&quot;) ),HYPERLINK(&quot;javascript:alert(&apos;This product is no longer supported through this channel, due to â€œEnd of Interactive Support (EOIS)â€ or removal of your access. Please contact your Intel representative for more information.&apos;)&quot;,IF(ISPICKVAL($User.UserType,&apos;PowerCustomerSuccess&apos;),IMAGE(&quot;/IPS/servlet/servlet.FileDownload?file=015210000000VsZ&quot;,&quot;New Case&quot;,15,15),IMAGE(&quot;/servlet/servlet.FileDownload?file=015210000000VsZ&quot;,&quot;New Case&quot;,15,15)),&quot;_parent&quot;)
)</formula>
        <label>New Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Project_Name__c</fullName>
        <description>To show this field on Lookup Window Page with no hyper link for IPS Project(Only For Internal Cases).</description>
        <formula>Core_IPS_Project__r.Name</formula>
        <label>IPS Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IPS Project associated with this asset</description>
        <label>IPS Project</label>
        <referenceTo>Core_IPS_Project__c</referenceTo>
        <relationshipLabel>Intel Product</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Supported_Product_EOIS__c</fullName>
        <description>Indicates if the Supported Product is no longer being supported by the Support Org. When EOIS=TRUE, the product is no longer supported.</description>
        <formula>Core_Supported_Product__r.Core_EOIS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When EOIS=TRUE it indicates that the Supported Product is no longer supported by the Support Org</inlineHelpText>
        <label>Supported Product EOIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Map_List__c</fullName>
        <description>Concatenated list of unique MAP/PAR header records that refer to this asset.</description>
        <inlineHelpText>Related MAP/PAR records</inlineHelpText>
        <label>Map List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Platform__c</fullName>
        <description>Platform value from the related master data Product</description>
        <inlineHelpText>Platform value from the related master data Product</inlineHelpText>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_EPM_ID__c</fullName>
        <description>EPMID of the related Master Data Product record</description>
        <formula>Product2.Core_Product_Name_EPM_ID__c</formula>
        <inlineHelpText>EPMID of the related Master Data Product record</inlineHelpText>
        <label>Product EPM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Support Org that this asset is related to</description>
        <inlineHelpText>Support Org ID that this asset is related to</inlineHelpText>
        <label>Support Org</label>
        <referenceTo>Core_IPS_Product_Organization__c</referenceTo>
        <relationshipLabel>Intel Products</relationshipLabel>
        <relationshipName>Intel_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Support_Org_Name__c</fullName>
        <description>Reference to the Support Org that this asset is related to</description>
        <formula>Core_Product_Organization__r.Core_IPS_Support_Org_Name__c</formula>
        <inlineHelpText>Name of the Support Org that this asset is related to</inlineHelpText>
        <label>Support Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Supported_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Supported Product</description>
        <inlineHelpText>Supported Product ID</inlineHelpText>
        <label>Supported Product</label>
        <referenceTo>Core_IPS_Supported_Product__c</referenceTo>
        <relationshipLabel>Intel Products</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>core_Product_Application__c</fullName>
        <description>This is the description for the Intel Support Org that supports this product</description>
        <formula>Core_Product_Organization__r.Core_Organization_Description__c</formula>
        <inlineHelpText>This is the description for the Intel Support Org that supports this product</inlineHelpText>
        <label>Product Focus Area</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>Core_IPS_New_Case__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Core_Support_Org_Name__c</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>Core_IPS_Asset__c</columns>
        <columns>Core_Supported_Product__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Intel Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPS_Customer_My_Intel_Products</fullName>
        <columns>Core_IPS_New_Case__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>core_Product_Application__c</columns>
        <columns>Core_IPS_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>My IntelÂ® Products</label>
        <sharedTo>
            <group>Core_PG_IPS_External_Customer</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Core_Asset_IPS_Asset</fullName>
        <active>true</active>
        <description>Asset used for IPS (Intel Premier Support)</description>
        <label>IPS Asset</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>